--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -9,16 +9,15 @@
     android:background="@color/colorPrimaryDark"
     tools:context="com.vacuum.app.plex.Fragments.MainFragment.ProfileFragment">
 
-    <!--<LinearLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="54dp"
         android:orientation="horizontal"
         android:background="@color/colorPrimaryDark"
         android:id="@+id/layout_logo"
-        android:gravity="center"
         android:layout_margin="0dp"
-        android:alpha="0.2"
-        android:layout_gravity="bottom"        >
+        android:layout_gravity="bottom"
+        android:alpha="0.2">
         <ImageView
             android:layout_width="32dp"
             android:layout_height="32dp"
@@ -46,7 +45,7 @@
             android:textSize="12sp"
             fontPath="fonts/brownregular.ttf"
             />
-    </LinearLayout>-->
+    </LinearLayout>
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar"
@@ -55,33 +54,20 @@
         android:fitsSystemWindows="true"
         android:theme="@style/AppTheme">
 
-        <com.vacuum.app.plex.Utility.CollapsingImageLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="220dp"
-            android:minHeight="108dp"
-            android:layout_marginBottom="10dp"
-            android:fitsSystemWindows="true"
+            android:layout_height="wrap_content"
             android:clickable="true"
+            android:orientation="vertical"
             android:id="@+id/layout1_editprofile"
             android:foreground="@drawable/ripple_effect"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
             <ImageView
-                android:id="@+id/background"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@color/colorPrimaryDark"
-                android:fitsSystemWindows="true"
-                android:scaleType="centerCrop"/>
-
-
-
-            <ImageView
                 android:id="@+id/avatar"
                 android:layout_width="96dp"
                 android:layout_height="96dp"
-                android:layout_gravity="bottom|center_horizontal"
-                android:layout_marginBottom="96dp"
+                android:layout_gravity="center"
                 android:padding="2dp"
                 android:tint="@color/white"
                 app:srcCompat="@drawable/if_sed_10_2232321"/>
@@ -91,7 +77,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom|center_horizontal"
-                android:layout_marginBottom="48dp"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:textStyle="bold"
                 android:textColor="@color/white"
@@ -109,7 +94,7 @@
                 android:text="Edit Profile"/>
 
 
-        </com.vacuum.app.plex.Utility.CollapsingImageLayout>
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
